# gpt-playground

./: .envrc  .gitignore  flake.nix  gpt-playground.cabal
app/: Main.hs
app/OpenAI/: Api.hs  Model.hs  Resources.hs
